update swagger on update status
